--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
@@ -22,18 +22,29 @@
 
   <div>
     <ol>
-      <li><b>Infectious disease physician:</b>  “… shout bumbling clumsy idiot *CLLLLT* Vesper *CRRRRT* Lynd actress's first name …”</li>
-      <li><b>Neurologist:</b>  “… *CLLLLT* unused people *CRRRRT* who create literature, poems …”</li>
-      <li><b>Geriatrician:</b>  “… fiend *CLLLLT* or *CRRRRT* monster king of Persia …”</li>
-      <li><b>Infectious disease physician:</b>  “… Tik's partner hand detergent *CLLLLT* to Scottish girl prophet from Abrahamic religions *CRRRRT* …”</li>
-      <li><b>Respiratory physician:</b>  “… recent cut grass *CLLLLT* for the Norse *CRRRRT* thunder god's lumberjacking tool …”</li>
-      <li><b>Haematologist:</b>  “… *CLLLLT* one of *CRRRRT* the ankle bones' stitch with the hearing appendage …”</li>
-      <li><b>Gastroenterologist:</b>  “… the Royal Queensland Show plants; German *CLLLLT*, *CRRRRT* yes! …”</li>
-      <li><b>Colorectal surgeon:</b>  “… giant Scomo’s favourite carbon *CLLLLT* fuel situated above *CRRRRT* …”</li>
-      <li><b>Gastroenterologist:</b>  “… desperate flightless bird native to *CLLLLT* South *CRRRRT* America …”</li>
-      <li><b>Cardiologist:</b>  “… tide *CLLLLT* recedes out from the Nutbush City Limit singer's *CRRRRT* first name usually …”</li>
-      <li><b>Rheumatologist:</b>  “… vanguard *CLLLLT* ASX code *CRRRRT* prompt Zippos, as an example …”</li>
-      <li><b>Oncologist:</b>  “… abject fear *CLLLLT* of drag female *CRRRRT* parent …”</li>
+      <li><b>Infectious disease physician:</b>  “… shout bumbling clumsy idiot <span class="static-span">*CLLLLT*</span> Vesper <span class="static-span">*CRRRRT*</span> Lynd actress's first name …”</li>
+
+      <li><b>Neurologist:</b>  “… <span class="static-span">*CLLLLT*</span> unused people <span class="static-span">*CRRRRT*</span> who create literature, poems …”</li>
+
+      <li><b>Geriatrician:</b>  “… fiend <span class="static-span">*CLLLLT*</span> or <span class="static-span">*CRRRRT*</span> monster king of Persia …”</li>
+      
+      <li><b>Infectious disease physician:</b>  “… Tik's partner hand detergent <span class="static-span">*CLLLLT*</span> to Scottish girl prophet from Abrahamic religions <span class="static-span">*CRRRRT*</span> …”</li>
+      
+      <li><b>Respiratory physician:</b>  “… recent cut grass <span class="static-span">*CLLLLT*</span> for the Norse <span class="static-span">*CRRRRT*</span> thunder god's lumberjacking tool …”</li>
+      
+      <li><b>Haematologist:</b>  “… <span class="static-span">*CLLLLT*</span> one of <span class="static-span">*CRRRRT*</span> the ankle bones' stitch with the hearing appendage …”</li>
+      
+      <li><b>Gastroenterologist:</b>  “… the Royal Queensland Show plants; German <span class="static-span">*CLLLLT*</span>, <span class="static-span">*CRRRRT*</span> yes! …”</li>
+      
+      <li><b>Colorectal surgeon:</b>  “… giant Scomo’s favourite carbon <span class="static-span">*CLLLLT*</span> fuel situated above <span class="static-span">*CRRRRT*</span> …”</li>
+      
+      <li><b>Gastroenterologist:</b>  “… desperate flightless bird native to <span class="static-span">*CLLLLT*</span> South <span class="static-span">*CRRRRT*</span> America …”</li>
+      
+      <li><b>Cardiologist:</b>  “… tide <span class="static-span">*CLLLLT*</span> recedes out from the Nutbush City Limit singer's <span class="static-span">*CRRRRT*</span> first name usually …”</li>
+      
+      <li><b>Rheumatologist:</b>  “… vanguard <span class="static-span">*CLLLLT*</span> ASX code <span class="static-span">*CRRRRT*</span> prompt Zippos, as an example …”</li>
+      
+      <li><b>Oncologist:</b>  “… abject fear <span class="static-span">*CLLLLT*</span> of drag female <span class="static-span">*CRRRRT*</span> parent …”</li>
 
     </ol>
   </div>
