--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
@@ -24,7 +24,7 @@
     <ol>
       <li><b>Infectious disease physician:</b>  “… shout bumbling clumsy idiot <span class="static-span">*CLLLLT*</span> Vesper <span class="static-span">*CRRRRT*</span> Lynd actress's first name …”</li>
 
-      <li><b>Neurologist:</b>  “… <span class="static-span">*CLLLLT*</span> unused people <span class="static-span">*CRRRRT*</span> who create literature, poems …”</li>
+      <li><b>Neurologist:</b>  “… <span class="static-span">*CLLLLT*</span> unused people <span class="static-span">*CRRRRT*</span> who create literature, articles …”</li>
 
       <li><b>Geriatrician:</b>  “… fiend <span class="static-span">*CLLLLT*</span> or <span class="static-span">*CRRRRT*</span> monster king of Persia …”</li>
       
@@ -42,7 +42,7 @@
       
       <li><b>Cardiologist:</b>  “… tide <span class="static-span">*CLLLLT*</span> recedes out from the Nutbush City Limit singer's <span class="static-span">*CRRRRT*</span> first name usually …”</li>
       
-      <li><b>Rheumatologist:</b>  “… vanguard <span class="static-span">*CLLLLT*</span> ASX code <span class="static-span">*CRRRRT*</span> prompt Zippos, as an example …”</li>
+      <li><b>Rheumatologist:</b>  “… Vanguard <span class="static-span">*CLLLLT*</span> ASX code <span class="static-span">*CRRRRT*</span> prompt Zippos, as an example …”</li>
       
       <li><b>Oncologist:</b>  “… abject fear <span class="static-span">*CLLLLT*</span> of drag female <span class="static-span">*CRRRRT*</span> parent …”</li>
 
