--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzles.html
@@ -7,6 +7,7 @@
 
 <div class="container">
   <center>
+    <h5>Liked Wardle and want more? Try <a class="home-a" href="/wardle/" target="_blank">Wardle: Casual Mode</a></h5>
     <br>
     <h2>Puzzles List</h2>
   </center>
