--- a/MDSCProj/MDSCApp/templates/MDSCApp/index.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/index.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <center>
-      <a class="home-a" href='/wardle/'><h5><b>Wardle Casual Mode</b></h5></a>
+      <h5>Liked Wardle and want more? Try <a class="home-a" href="/wardle/" target="_blank">Wardle: Casual Mode</a></h5>
       <br>
       <h2>Welcome to</h2>
       <img src="/static/MDSCApp/img/Logo_text_puzzle3.png" alt="MDSC Logo" style="width: min(100%, 900px);padding-top:10px">
