--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
@@ -6,7 +6,7 @@
 {% block content %}
 
       
-<div class="container inner-container">
+<div class="container inner-container" style="border-color: #235c4a;">
   <center>
     <h4>Puzzle {{puzInfo.puzId}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
