--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
@@ -5,13 +5,15 @@
 
 {% block content %}
 
-<div class="container inner-container">
+<div class="container inner-container" style="border-color: #2a79bd;">
   <center>
     <h4>Puzzle {{puzInfo.puzId}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
+    <p class="flavourtext"><b>Errata 09:52am 29/06:</b> The word "poems" in the 2nd clue was changed to "articles". The word "Vanguard" in the 11th clue was capitalised. The PDF has also been updated with these changes.</p>
     <a class="btn btn-primary" href="/pdf/3/" target="_blank" style="margin: 5px;">Download PDF version</a>
     <a class="btn btn-success" href="/solve/3/" style="margin: 5px;">Submit a guess</a>
     <br>
+
     <br>
     <p class="flavourtext">
       The hospital’s phone lines are terrible! You can barely understand what cryptic things these doctors are trying to tell you over the static, but you try your best to listen anyway. You did however manage to catch these words:
