--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
@@ -54,7 +54,7 @@
       <center>
         <div class="puzzle-4-container-2">
           <p class="puz-4-txt"><b>Description of concern:</b></p>
-          <p class="puz-4-txt-2">The student behaved incredibly unprofessionally during the eight months he was on hospital placement; I will summarise several episodes of such behaviour below.</p>
+          <p class="puz-4-txt-2">The student behaved incredibly unprofessionally during the eight months of his hospital placement. Here I will summarise several episodes of such behaviour, for which he had been named many times.</p>
 
           <ol class="puz-4-txt-2">
             <li>In January, on the 6th, the student inappropriately administered adrenaline to a patient, causing a cardiac arrest. The student then placed the patient in a hyperbaric chamber. He also recommended another patient to take cigarettes for diarrhoea.</li>
@@ -65,19 +65,19 @@
 
             <li>In May, on the 4th, the student disrupted an oncological consult session before spending the night in the sleep lab. He then injected himself with insulin resulting in a seizure. He was then seen engaging in inappropriate personal intimacy with a medical administrator.</li>
 
-            <li>In August, on the 12th, the student would pretend to call patients into clinic but actually leave them to wait. He then left placement to play games at home with his best friend. He was then seen holding a gun and a sword at the hospital.</li>
+            <li>In August, on the 12th, the student would pretend to call patients into clinic but actually left them to wait. He then left placement to play games at home with his best friend. He was then seen holding a gun and a sword at the hospital.</li>
 
-            <li>In January, on the 4th, the student accused a patient’s mother of being negligent when she refuses treatment for her son, as is her right. The student then fakes a phone call. He also argued with the son of an elderly patient.</li>
+            <li>In January, on the 4th, the student accused a patient’s mother of being negligent when she refused treatment for her son, as was her right. He also argued with the son of an elderly patient who took a fancy to the student.</li>
 
-            <li>In July, on the 14th, the student engaged in a religious debate with a patient over whether God has healing powers. He then forged a signature to access a patient’s confidential records. The student then lied to the first patient in order to convince him to accept a treatment to which he was originally opposed.</li>
+            <li>In July, on the 14th, the student engaged in a religious debate with a patient over whether God had healing powers. He then forged a signature to access another patient’s confidential records. The student then lied to the first patient in order to convince him to accept a treatment to which he was originally opposed.</li>
 
             <li>In March, on the 4th, the student doped a colleague’s coffee with stimulants. He then attempted to inform a patient of her diagnosis despite her wishes not to know. He then disclosed a highly personal matter of that patient to her parents without her consent.</li>
 
-            <li>In July, on the 4th, the student discharges a patient before he is cleared to do so. He also stoked the ire of his colleague’s mother, resulting in a legal challenge. The student then insulted another colleague in order to raise his blood pressure.</li>
+            <li>In July, on the 4th, the student discharged a patient before he was cleared to do so. He also stoked the ire of his colleague’s mother, resulting in a legal challenge. The student then insulted another colleague in order to raise his blood pressure.</li>
 
-            <li>In February, on the 5th, the student constantly talks inappropriately about a young patient’s physical attractiveness while accusing her of being a drug addict. The student then refuses to perform mandatory reporting. The student then deliberately misgenders the patient. Another patient was told by the student to stop whining.</li>
+            <li>In February, on the 5th, the student constantly talked inappropriately about a young patient’s physical attractiveness while accusing her of being a drug addict. The student then refused to perform mandatory reporting. The student then deliberately misgendered the patient. Another patient was told by the student to stop whining.</li>
 
-            <li>In August, on the 6th, the student belittled a patient’s grief over his inability to play professional hockey. He then switched places with a patient who was to undergo an MRI scan, causing himself to become stuck in the machine.</li>
+            <li>In July, on the 13th, the student used an upright mobility scooter unauthorised in the hospital, took drugs in front of another student who told him to stop, parked in disabled parking, and constantly accused a patient of being a criminal.</li>
 
             <li>In July, on the 6th, the student accosted a professional boxer and injected him with adrenaline while hitting them. He then forced the boxer to drink multiple bottles of water. He then knocked the boxer out with a blow to the neck.</li>
 
