--- a/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
+++ b/MDSCProj/MDSCApp/static/MDSCApp/css/main.css
@@ -169,3 +169,9 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid rgb(0,0,0,1);
   border-radius: 0.5rem;
 }
+
+.btn-warning {
+  color: white;
+  margin: 5px;
+  background-color: #FFA500;
+}
