--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle3.html
@@ -13,7 +13,21 @@
     <a class="btn btn-primary" href="/pdf/3/" target="_blank" style="margin: 5px;">Download PDF version</a>
     <a class="btn btn-success" href="/solve/3/" style="margin: 5px;">Submit a guess</a>
     <br>
-
+    {% if puzInfo.hints %}
+      <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint1" aria-expanded="false" aria-controls="hint1" style="margin:5px">
+        Early hint (show/hide)
+      </button>
+      <div id="hint1" class="collapse">
+        <p>When in doubt, speak it aloud. How do the answers fit the clues?</p>
+      </div>
+      <br>
+      <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint2" aria-expanded="false" aria-controls="hint2" style="margin:5px">
+        Late hint (show/hide)
+      </button>
+      <div id="hint2" class="collapse">
+        <p>Some steps in life are best taken not once, but twice.</p>
+      </div>
+    {% endif %}
     <br>
     <p class="flavourtext">
       The hospital’s phone lines are terrible! You can barely understand what cryptic things these doctors are trying to tell you over the static, but you try your best to listen anyway. You did however manage to catch these words:
