--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
@@ -13,6 +13,22 @@
     <a class="btn btn-primary" href="/pdf/4/" target="_blank" style="margin: 5px;">Download PDF version</a>
     <a class="btn btn-success" href="/solve/4/" style="margin: 5px;">Submit a guess</a>
     <br>
+    {% if puzInfo.hints %}
+      <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint1" aria-expanded="false" aria-controls="hint1" style="margin:5px">
+        Early hint (show/hide)
+      </button>
+      <div id="hint1" class="collapse">
+        <p>There is a universe in which these episodes happened. In that universe, each season lasts a month.</p>
+      </div>
+      <br>
+      <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint2" aria-expanded="false" aria-controls="hint2" style="margin:5px">
+        Late hint (show/hide)
+      </button>
+      <div id="hint2" class="collapse">
+        <p>You should factor in the old medical saying: when you hear hooves, think zebras not horses.</p>
+      </div>
+    {% endif %}
+    <br>
   </center>
   
   <link rel="stylesheet" type="text/css" href="{% static 'MDSCApp/css/puzzle4.css'%}">
