--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
@@ -18,7 +18,7 @@
         Early hint (show/hide)
       </button>
       <div id="hint1" class="collapse">
-        <p>There is a universe in which these episodes happened. In that universe, each season lasts a month.</p>
+        <p>There is a universe in which these eighteen episodes happened. In that universe, each season lasts a month.</p>
       </div>
       <br>
       <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint2" aria-expanded="false" aria-controls="hint2" style="margin:5px">
