--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
@@ -11,7 +11,11 @@
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
     <p class="flavourtext">(Note: this puzzle is best viewed either on a computer, or via the PDF version if using mobile.)</p>
     <a class="btn btn-primary" href="/pdf/4/" target="_blank" style="margin: 5px;">Download PDF version</a>
-    <a class="btn btn-success" href="/solve/4/" style="margin: 5px;">Submit a guess</a>
+    {% if sols %}
+      <a class="btn btn-success" href="/solve/{{puzInfo.puzId}/" style="margin: 5px;">Submit a guess</a>
+    {% else %}
+      <a class="btn btn-info" href="/solution/{{puzInfo.puzId}/" style="margin: 5px;">View solution</a>
+    {% endif %}
     <br>
     {% if puzInfo.hints %}
       <button class="btn btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#hint1" aria-expanded="false" aria-controls="hint1" style="margin:5px">
