--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
@@ -13,7 +13,9 @@
     <h5>Guesses: {{puzInfo.guesses}}</h5>
   </center>
 
-  <p>This Professional Behaviour Notification lists several incidents involving an unprofessional medical student.</p>
+  <p>This Professional Behaviour Notification lists several incidents involving an unprofessional medical student at the Best Medical School (any resemblance to real medical schools is purely coincidental).</p>
+
+  <p>The first step is to identify this "student". Several clues point towards him being <b>Dr Gregory House</b>, from the TV show <b>House MD</b>:</p> 
 
   <h4>Solution is work in progress. Check back in a few hours.</h4>
 
