--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle2.html
@@ -11,9 +11,9 @@
     <h4>Puzzle {{puzInfo.puzId}}</h4>
     <h2 style="margin-bottom: 1rem">{{puzInfo.title}}</h2>
     {% if not puzInfo.sols %}
-      <a class="btn btn-success" href="/solve/{{puzInfo.puzId}/" style="margin: 5px;">Submit a guess</a>
+      <a class="btn btn-success" href="/solve/{{puzInfo.puzId}}/" style="margin: 5px;">Submit a guess</a>
     {% else %}
-      <a class="btn btn-info" href="/solution/{{puzInfo.puzId}/" style="margin: 5px;">View solution</a>
+      <a class="btn btn-info" href="/solution/{{puzInfo.puzId}}/" style="margin: 5px;">View solution</a>
     {% endif %}
     <br>
     {% if puzInfo.hints %}
