--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/puzzle4.html
@@ -12,9 +12,9 @@
     <p class="flavourtext">(Note: this puzzle is best viewed either on a computer, or via the PDF version if using mobile.)</p>
     <a class="btn btn-primary" href="/pdf/4/" target="_blank" style="margin: 5px;">Download PDF version</a>
     {% if not puzInfo.sols %}
-      <a class="btn btn-success" href="/solve/{{puzInfo.puzId}/" style="margin: 5px;">Submit a guess</a>
+      <a class="btn btn-success" href="/solve/{{puzInfo.puzId}}/" style="margin: 5px;">Submit a guess</a>
     {% else %}
-      <a class="btn btn-info" href="/solution/{{puzInfo.puzId}/" style="margin: 5px;">View solution</a>
+      <a class="btn btn-info" href="/solution/{{puzInfo.puzId}}/" style="margin: 5px;">View solution</a>
     {% endif %}
     <br>
     {% if puzInfo.hints %}
